# comet

./: .gitignore  README.md
include/comet/: config.h  socket.h
makefiles/config/: CMakeLists.txt  config.pro
makefiles/socket/: CMakeLists.txt
pro/socket/: socket.pro
src/comet/: config.cpp  socket.cpp
tests/makefiles/test_config/: CMakeLists.txt
tests/makefiles/test_socket/: CMakeLists.txt
tests/pro/test_config/: CMakeLists.txt  test_config.pro
tests/pro/test_socket/: CMakeLists.txt  test_socket.pro
tests/src/: main.cpp  test_config.cpp  test_socket.cpp
